--- a/src/apps/app-mail/app-mail-message/app-mail-message.component.scss
+++ b/src/apps/app-mail/app-mail-message/app-mail-message.component.scss
@@ -39,7 +39,10 @@
 .app-mail-message__empty {
   width: 100%;
   height: 100%;
-  background: url('/assets/images/3n.png') no-repeat 50% 50%;
+  background-image: url('/assets/images/logo.png');
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
   opacity: 0.3;
 }
 
